// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide option to move the copy for collection entities 1`] = `
<Modal
  className="CopyModal"
  onClose={[MockFunction]}
  onConfirm={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    buttonOnClick={[Function]}
    closeModal={[Function]}
    iconDescription="Close"
  >
    Copy collection
  </ForwardRef(ModalHeader)>
  <ForwardRef>
    <Form>
      <FormGroup>
        <ForwardRef(LabeledInput)
          autoComplete="off"
          label="Name of Copy"
          onChange={[Function]}
          type="text"
          value="collection (copy)"
        />
      </FormGroup>
      <Message>
        All items and users will be copied.
      </Message>
    </Form>
  </ForwardRef>
  <ForwardRef(ModalFooter)
    closeModal={[Function]}
    onRequestClose={[Function]}
    onRequestSubmit={[Function]}
  >
    <Button
      className="cancel"
      kind="secondary"
      onClick={[MockFunction]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      onClick={[Function]}
    >
      Copy
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;

exports[`should match snapshot 1`] = `
<Modal
  className="CopyModal"
  onClose={[MockFunction]}
  onConfirm={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    buttonOnClick={[Function]}
    closeModal={[Function]}
    iconDescription="Close"
  >
    Copy Test Dashboard
  </ForwardRef(ModalHeader)>
  <ForwardRef>
    <Form>
      <FormGroup>
        <ForwardRef(LabeledInput)
          autoComplete="off"
          label="Name of Copy"
          onChange={[Function]}
          type="text"
          value="Test Dashboard (copy)"
        />
      </FormGroup>
      <MoveCopyErrorHandler
        collection={null}
        entity={
          Object {
            "data": Object {
              "subEntityCounts": Object {
                "report": 2,
              },
            },
            "entityType": "dashboard",
            "name": "Test Dashboard",
          }
        }
        moving={false}
        parentCollection="aCollectionId"
        setCollection={[Function]}
        setMoving={[Function]}
      />
    </Form>
  </ForwardRef>
  <ForwardRef(ModalFooter)
    closeModal={[Function]}
    onRequestClose={[Function]}
    onRequestSubmit={[Function]}
  >
    <Button
      className="cancel"
      kind="secondary"
      onClick={[MockFunction]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      onClick={[Function]}
    >
      Copy
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;
